--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -286,7 +286,7 @@ jobs:
           https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
           dexcom_upload_readings \
           future_carbs_4h \
-          low_carb_limit \
+          high_carb_limit \
           override_sens \
           now_line \
           lnl_icon \
