--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -302,8 +302,7 @@ jobs:
           2002 \
           basal_lock \
           live_activity \
-          negative_insulin \
-          g7_scan
+          negative_insulin
 
           # the final customization listed above CANNOT have a continuation character "\"
           # more customizations can be pasted after this line
